# napari-CQ1-segmentation-viewer

./: .gitignore  LICENSE  README.md  setup.cfg  tox.ini
src/napari_cq1_segementation_viewer/: _main_widget.py  _quickload_CQ1_series.py  _widget.py  napari.yaml
src/napari_cq1_segementation_viewer/_tests/: test_widget.py
src/napari_cq1_segmentation_viewer/: __init__.py  _main_widget.py  _quickload_CQ1_series.py  napari.yaml
src/napari_cq1_segmentation_viewer/_tests/: test_widget.py
src/napari_cq1_segmentation_viewer/cq1_utils/: utils_cq1.py
